--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <footer class="text-center py-4 text-muted">
-    &copy; 2025 Álvaro González – teruteru314
+    &copy; 2025 teruteru314
   </footer>
 
 </body>
