--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Tarjeta 1 -->
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="assets/img/antares_p6.jpg" class="card-img-top" alt="Antares P6">
+          <img src="assets/img/Antares Main.JPG" class="card-img-top" alt="Antares P6">
           <div class="card-body">
             <h5 class="card-title">Antares P6</h5>
             <p class="card-text">Full reverse-engineered model of a mechanical calculator with 750+ unique parts.</p>
