--- a/modelos/antares-p6.html
+++ b/modelos/antares-p6.html
@@ -23,7 +23,7 @@
 
     <!-- Hero image -->
     <div class="mb-4">
-      <img src="../assets/img/Antares Main.jpg" alt="Antares P6" class="img-fluid w-100 rounded shadow hero-img">
+      <img src="../assets/img/Antares Main.JPG" alt="Antares P6" class="img-fluid w-100 rounded shadow hero-img">
     </div>
 
     <div class="row g-4">
@@ -39,44 +39,44 @@
         <h4 class="mt-4">🖼 Preview Gallery</h4>
         <div class="row g-3">
           <div class="col-md-6">
-            <img src="../assets/img/Antares Main.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Antares Main.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Antares 1.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Antares 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Antares 2.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 2" />
+            <img src="../assets/img/Antares 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 2" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Antares 3.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 3" />
+            <img src="../assets/img/Antares 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 3" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Bottom.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Bottom.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Carriage 1.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Carriage 2.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div><div class="col-md-6">
-            <img src="../assets/img/Carriage 3.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div><div class="col-md-6">
-            <img src="../assets/img/Carriage 4.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 4.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div><div class="col-md-6">
-            <img src="../assets/img/Carriage 5.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 5.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div><div class="col-md-6">
-            <img src="../assets/img/Carriage 6.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Carriage 6.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div><div class="col-md-6">
-            <img src="../assets/img/Drum01.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Drum01.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Drum02.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Drum02.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Operand Group.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Operand Group.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
           <div class="col-md-6">
-            <img src="../assets/img/Upper Plate assy.jpg" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
+            <img src="../assets/img/Upper Plate assy.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
           </div>
       </div>
 
