--- a/modelos/antares-p6.html
+++ b/modelos/antares-p6.html
@@ -4,9 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Antares P6 – teruteru314</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Lightbox2 CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet" />
+
+  <!-- Lightbox Icon Fix -->
   <style>
     .hero-img {
       max-height: 500px;
@@ -17,23 +21,20 @@
       position: sticky;
       top: 1rem;
     }
+    /* Force Lightbox buttons to load from CDN */
+    .lightbox .lb-prev, .lightbox .lb-next, .lightbox .lb-close {
+      background-image: none !important;
+    }
+    .lb-nav a.lb-prev {
+      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/prev.png') left 48% no-repeat;
+    }
+    .lb-nav a.lb-next {
+      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/next.png') right 48% no-repeat;
+    }
+    .lb-data .lb-close {
+      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/close.png') top right no-repeat;
+    }
   </style>
-  <style>
-/* Fix para iconos del CDN */
-.lightbox .lb-prev, .lightbox .lb-next, .lightbox .lb-close {
-  background-image: none !important;
-}
-
-.lb-nav a.lb-prev {
-  background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/prev.png') left 48% no-repeat;
-}
-.lb-nav a.lb-next {
-  background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/next.png') right 48% no-repeat;
-}
-.lb-data .lb-close {
-  background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/close.png') top right no-repeat;
-}
-</style>
 </head>
 <body class="bg-light">
 
@@ -45,7 +46,7 @@
     </div>
 
     <div class="row g-4">
-      <!-- Columna principal -->
+      <!-- Main column -->
       <div class="col-lg-8">
         <h1 class="mb-2">Antares P6 – Mechanical Calculator</h1>
         <p class="text-muted">by <strong>teruteru314</strong></p>
@@ -56,82 +57,22 @@
 
         <h4 class="mt-4">🖼 Preview Gallery</h4>
         <div class="row g-3">
-          <!-- Imágenes con Lightbox -->
-          <div class="col-md-6">
-            <a href="../assets/img/Antares Main.JPG" data-lightbox="antares" data-title="Antares Main">
-              <img src="../assets/img/Antares Main.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Antares 1.JPG" data-lightbox="antares" data-title="Antares 1">
-              <img src="../assets/img/Antares 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 2" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Antares 2.JPG" data-lightbox="antares" data-title="Antares 2">
-              <img src="../assets/img/Antares 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 3" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Antares 3.JPG" data-lightbox="antares" data-title="Antares 3">
-              <img src="../assets/img/Antares 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 4" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Bottom.JPG" data-lightbox="antares" data-title="Bottom View">
-              <img src="../assets/img/Bottom.JPG" class="img-fluid rounded shadow-sm" alt="Bottom" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 1.JPG" data-lightbox="antares" data-title="Carriage 1">
-              <img src="../assets/img/Carriage 1.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 1" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 2.JPG" data-lightbox="antares" data-title="Carriage 2">
-              <img src="../assets/img/Carriage 2.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 2" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 3.JPG" data-lightbox="antares" data-title="Carriage 3">
-              <img src="../assets/img/Carriage 3.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 3" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 4.JPG" data-lightbox="antares" data-title="Carriage 4">
-              <img src="../assets/img/Carriage 4.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 4" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 5.JPG" data-lightbox="antares" data-title="Carriage 5">
-              <img src="../assets/img/Carriage 5.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 5" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Carriage 6.JPG" data-lightbox="antares" data-title="Carriage 6">
-              <img src="../assets/img/Carriage 6.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 6" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Drum01.JPG" data-lightbox="antares" data-title="Drum 01">
-              <img src="../assets/img/Drum01.JPG" class="img-fluid rounded shadow-sm" alt="Drum 01" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Drum02.JPG" data-lightbox="antares" data-title="Drum 02">
-              <img src="../assets/img/Drum02.JPG" class="img-fluid rounded shadow-sm" alt="Drum 02" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Operand Group.JPG" data-lightbox="antares" data-title="Operand Group">
-              <img src="../assets/img/Operand Group.JPG" class="img-fluid rounded shadow-sm" alt="Operand Group" />
-            </a>
-          </div>
-          <div class="col-md-6">
-            <a href="../assets/img/Upper Plate assy.JPG" data-lightbox="antares" data-title="Upper Plate Assembly">
-              <img src="../assets/img/Upper Plate assy.JPG" class="img-fluid rounded shadow-sm" alt="Upper Plate" />
-            </a>
-          </div>
+          <!-- Lightbox gallery -->
+          <div class="col-md-6"><a href="../assets/img/Antares Main.JPG" data-lightbox="antares" data-title="Antares Main"><img src="../assets/img/Antares Main.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Antares 1.JPG" data-lightbox="antares" data-title="Antares 1"><img src="../assets/img/Antares 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 2" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Antares 2.JPG" data-lightbox="antares" data-title="Antares 2"><img src="../assets/img/Antares 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 3" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Antares 3.JPG" data-lightbox="antares" data-title="Antares 3"><img src="../assets/img/Antares 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 4" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Bottom.JPG" data-lightbox="antares" data-title="Bottom View"><img src="../assets/img/Bottom.JPG" class="img-fluid rounded shadow-sm" alt="Bottom" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 1.JPG" data-lightbox="antares" data-title="Carriage 1"><img src="../assets/img/Carriage 1.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 1" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 2.JPG" data-lightbox="antares" data-title="Carriage 2"><img src="../assets/img/Carriage 2.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 2" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 3.JPG" data-lightbox="antares" data-title="Carriage 3"><img src="../assets/img/Carriage 3.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 3" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 4.JPG" data-lightbox="antares" data-title="Carriage 4"><img src="../assets/img/Carriage 4.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 4" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 5.JPG" data-lightbox="antares" data-title="Carriage 5"><img src="../assets/img/Carriage 5.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 5" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Carriage 6.JPG" data-lightbox="antares" data-title="Carriage 6"><img src="../assets/img/Carriage 6.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 6" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Drum01.JPG" data-lightbox="antares" data-title="Drum 01"><img src="../assets/img/Drum01.JPG" class="img-fluid rounded shadow-sm" alt="Drum 01" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Drum02.JPG" data-lightbox="antares" data-title="Drum 02"><img src="../assets/img/Drum02.JPG" class="img-fluid rounded shadow-sm" alt="Drum 02" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Operand Group.JPG" data-lightbox="antares" data-title="Operand Group"><img src="../assets/img/Operand Group.JPG" class="img-fluid rounded shadow-sm" alt="Operand Group" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/Upper Plate assy.JPG" data-lightbox="antares" data-title="Upper Plate Assembly"><img src="../assets/img/Upper Plate assy.JPG" class="img-fluid rounded shadow-sm" alt="Upper Plate" /></a></div>
         </div>
 
         <h4 class="mt-5">📄 Description</h4>
@@ -139,13 +80,12 @@
           This reconstruction includes all internal mechanisms: registers, carriage, digital readout wheels, transmission shafts, locking levers and gear trains.
           The model is provided in STEP format as 320 separate part files.
         </p>
-
         <p>
           No textures or colors were applied to preserve compatibility with all CAD platforms. Components are named and organized in accordance with functional groups.
         </p>
       </div>
 
-      <!-- Columna lateral (descarga) -->
+      <!-- Sidebar (download) -->
       <div class="col-lg-4">
         <div class="card shadow sticky-sidebar">
           <div class="card-body">
@@ -181,4 +121,3 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
 </body>
 </html>
-
