--- a/modelos/antares-p6.html
+++ b/modelos/antares-p6.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Antares P6 – teruteru314</title>
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS (desde CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <!-- Lightbox2 CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet" />
 
-  <!-- Lightbox Icon Fix -->
+  <!-- Lightbox2 CSS (local) -->
+  <link href="../assets/lightbox2/lightbox.min.css" rel="stylesheet" />
+
   <style>
     .hero-img {
       max-height: 500px;
@@ -20,19 +20,6 @@
     .sticky-sidebar {
       position: sticky;
       top: 1rem;
-    }
-    /* Force Lightbox buttons to load from CDN */
-    .lightbox .lb-prev, .lightbox .lb-next, .lightbox .lb-close {
-      background-image: none !important;
-    }
-    .lb-nav a.lb-prev {
-      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/prev.png') left 48% no-repeat;
-    }
-    .lb-nav a.lb-next {
-      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/next.png') right 48% no-repeat;
-    }
-    .lb-data .lb-close {
-      background: url('https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/images/close.png') top right no-repeat;
     }
   </style>
 </head>
@@ -77,47 +64,4 @@
 
         <h4 class="mt-5">📄 Description</h4>
         <p>
-          This reconstruction includes all internal mechanisms: registers, carriage, digital readout wheels, transmission shafts, locking levers and gear trains.
-          The model is provided in STEP format as 320 separate part files.
-        </p>
-        <p>
-          No textures or colors were applied to preserve compatibility with all CAD platforms. Components are named and organized in accordance with functional groups.
-        </p>
-      </div>
 
-      <!-- Sidebar (download) -->
-      <div class="col-lg-4">
-        <div class="card shadow sticky-sidebar">
-          <div class="card-body">
-            <h5 class="card-title">Download Model</h5>
-            <p class="card-text">320 STEP files in a single ZIP archive.</p>
-            <a href="https://github.com/Teruteru314/teruteru314.github.io/releases/download/Antares-p6/Antares.P6.step.zip"
-               class="btn btn-primary w-100"
-               target="_blank"
-               rel="noopener noreferrer">
-              Download ZIP
-            </a>
-            <hr>
-            <p class="small text-muted mb-0">
-              This content is shared for reference only. Redistribution is not permitted without authorization.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <hr class="my-5">
-
-    <div class="text-center">
-      <a href="../index.html" class="btn btn-outline-secondary">&larr; Back to Portfolio</a>
-    </div>
-  </div>
-
-  <footer class="text-center py-4 text-muted">
-    &copy; 2025 teruteru314
-  </footer>
-
-  <!-- Lightbox2 JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
-</body>
-</html>
