--- a/modelos/antares-p6.html
+++ b/modelos/antares-p6.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Antares P6 – teruteru314</title>
 
-  <!-- Bootstrap CSS (desde CDN) -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
   <!-- Lightbox2 CSS (local) -->
   <link href="../assets/lightbox2/lightbox.min.css" rel="stylesheet" />
 
@@ -29,7 +28,7 @@
 
     <!-- Hero image -->
     <div class="mb-4">
-      <img src="../assets/img/Antares Main.JPG" alt="Antares P6" class="img-fluid w-100 rounded shadow hero-img">
+      <img src="../assets/img/AntaresP6/Antares Main.JPG" alt="Antares P6" class="img-fluid w-100 rounded shadow hero-img">
     </div>
 
     <div class="row g-4">
@@ -45,23 +44,66 @@
         <h4 class="mt-4">🖼 Preview Gallery</h4>
         <div class="row g-3">
           <!-- Lightbox gallery -->
-          <div class="col-md-6"><a href="../assets/img/Antares Main.JPG" data-lightbox="antares" data-title="Antares Main"><img src="../assets/img/Antares Main.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 1" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Antares 1.JPG" data-lightbox="antares" data-title="Antares 1"><img src="../assets/img/Antares 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 2" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Antares 2.JPG" data-lightbox="antares" data-title="Antares 2"><img src="../assets/img/Antares 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 3" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Antares 3.JPG" data-lightbox="antares" data-title="Antares 3"><img src="../assets/img/Antares 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares view 4" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Bottom.JPG" data-lightbox="antares" data-title="Bottom View"><img src="../assets/img/Bottom.JPG" class="img-fluid rounded shadow-sm" alt="Bottom" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 1.JPG" data-lightbox="antares" data-title="Carriage 1"><img src="../assets/img/Carriage 1.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 1" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 2.JPG" data-lightbox="antares" data-title="Carriage 2"><img src="../assets/img/Carriage 2.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 2" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 3.JPG" data-lightbox="antares" data-title="Carriage 3"><img src="../assets/img/Carriage 3.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 3" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 4.JPG" data-lightbox="antares" data-title="Carriage 4"><img src="../assets/img/Carriage 4.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 4" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 5.JPG" data-lightbox="antares" data-title="Carriage 5"><img src="../assets/img/Carriage 5.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 5" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Carriage 6.JPG" data-lightbox="antares" data-title="Carriage 6"><img src="../assets/img/Carriage 6.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 6" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Drum01.JPG" data-lightbox="antares" data-title="Drum 01"><img src="../assets/img/Drum01.JPG" class="img-fluid rounded shadow-sm" alt="Drum 01" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Drum02.JPG" data-lightbox="antares" data-title="Drum 02"><img src="../assets/img/Drum02.JPG" class="img-fluid rounded shadow-sm" alt="Drum 02" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Operand Group.JPG" data-lightbox="antares" data-title="Operand Group"><img src="../assets/img/Operand Group.JPG" class="img-fluid rounded shadow-sm" alt="Operand Group" /></a></div>
-          <div class="col-md-6"><a href="../assets/img/Upper Plate assy.JPG" data-lightbox="antares" data-title="Upper Plate Assembly"><img src="../assets/img/Upper Plate assy.JPG" class="img-fluid rounded shadow-sm" alt="Upper Plate" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Antares Main.JPG" data-lightbox="antares" data-title="Antares Main"><img src="../assets/img/AntaresP6/Antares Main.JPG" class="img-fluid rounded shadow-sm" alt="Antares Main" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Antares 1.JPG" data-lightbox="antares" data-title="Antares 1"><img src="../assets/img/AntaresP6/Antares 1.JPG" class="img-fluid rounded shadow-sm" alt="Antares 1" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Antares 2.JPG" data-lightbox="antares" data-title="Antares 2"><img src="../assets/img/AntaresP6/Antares 2.JPG" class="img-fluid rounded shadow-sm" alt="Antares 2" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Antares 3.JPG" data-lightbox="antares" data-title="Antares 3"><img src="../assets/img/AntaresP6/Antares 3.JPG" class="img-fluid rounded shadow-sm" alt="Antares 3" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Bottom.JPG" data-lightbox="antares" data-title="Bottom View"><img src="../assets/img/AntaresP6/Bottom.JPG" class="img-fluid rounded shadow-sm" alt="Bottom View" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 1.JPG" data-lightbox="antares" data-title="Carriage 1"><img src="../assets/img/AntaresP6/Carriage 1.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 1" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 2.JPG" data-lightbox="antares" data-title="Carriage 2"><img src="../assets/img/AntaresP6/Carriage 2.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 2" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 3.JPG" data-lightbox="antares" data-title="Carriage 3"><img src="../assets/img/AntaresP6/Carriage 3.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 3" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 4.JPG" data-lightbox="antares" data-title="Carriage 4"><img src="../assets/img/AntaresP6/Carriage 4.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 4" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 5.JPG" data-lightbox="antares" data-title="Carriage 5"><img src="../assets/img/AntaresP6/Carriage 5.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 5" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Carriage 6.JPG" data-lightbox="antares" data-title="Carriage 6"><img src="../assets/img/AntaresP6/Carriage 6.JPG" class="img-fluid rounded shadow-sm" alt="Carriage 6" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Drum01.JPG" data-lightbox="antares" data-title="Drum 01"><img src="../assets/img/AntaresP6/Drum01.JPG" class="img-fluid rounded shadow-sm" alt="Drum 01" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Drum02.JPG" data-lightbox="antares" data-title="Drum 02"><img src="../assets/img/AntaresP6/Drum02.JPG" class="img-fluid rounded shadow-sm" alt="Drum 02" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Operand Group.JPG" data-lightbox="antares" data-title="Operand Group"><img src="../assets/img/AntaresP6/Operand Group.JPG" class="img-fluid rounded shadow-sm" alt="Operand Group" /></a></div>
+          <div class="col-md-6"><a href="../assets/img/AntaresP6/Upper Plate assy.JPG" data-lightbox="antares" data-title="Upper Plate Assembly"><img src="../assets/img/AntaresP6/Upper Plate assy.JPG" class="img-fluid rounded shadow-sm" alt="Upper Plate" /></a></div>
         </div>
 
         <h4 class="mt-5">📄 Description</h4>
         <p>
+          This reconstruction includes all internal mechanisms: registers, carriage, digital readout wheels, transmission shafts, locking levers and gear trains.
+          The model is provided in STEP format as 320 separate part files.
+        </p>
+        <p>
+          No textures or colors were applied to preserve compatibility with all CAD platforms. Components are named and organized in accordance with functional groups.
+        </p>
+      </div>
 
+      <!-- Sidebar (download) -->
+      <div class="col-lg-4">
+        <div class="card shadow sticky-sidebar">
+          <div class="card-body">
+            <h5 class="card-title">Download Model</h5>
+            <p class="card-text">320 STEP files in a single ZIP archive.</p>
+            <a href="https://github.com/Teruteru314/teruteru314.github.io/releases/download/Antares-p6/Antares.P6.step.zip"
+               class="btn btn-primary w-100"
+               target="_blank"
+               rel="noopener noreferrer">
+              Download ZIP
+            </a>
+            <hr>
+            <p class="small text-muted mb-0">
+              This content is shared for reference only. Redistribution is not permitted without authorization.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <hr class="my-5">
+
+    <div class="text-center">
+      <a href="../index.html" class="btn btn-outline-secondary">&larr; Back to Portfolio</a>
+    </div>
+  </div>
+
+  <footer class="text-center py-4 text-muted">
+    &copy; 2025 teruteru314
+  </footer>
+
+  <!-- Lightbox2 JS -->
+  <script src="../assets/lightbox2/lightbox.min.js"></script>
+</body>
+</html>
