--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <!-- Tarjeta 2 -->
       <div class="col">
         <div class="card h-100 shadow-sm">
-          <img src="assets/img/curta1.jpg" class="card-img-top" alt="Curta Model 1">
+          <img src="assets/img/CurtaTipo1/CompleteGroup.jpg" class="card-img-top" alt="Curta Model 1">
           <div class="card-body">
             <h5 class="card-title">Curta Model 1</h5>
             <p class="card-text">Detailed 3D reconstruction based on the original factory blueprints.</p>
-            <a href="modelos/curta-modelo1.html" class="btn btn-primary">View Project</a>
+            <a href="modelos/curtatipo1.html" class="btn btn-primary">View Project</a>
           </div>
         </div>
       </div>
