Change idex.html & directory names

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="card-body">
             <h5 class="card-title">Antares P6</h5>
             <p class="card-text">Full reverse-engineered model of a mechanical calculator with 750+ unique parts.</p>
-            <a href="modelos/antares-p6.html" class="btn btn-primary">View Project</a>
+            <a href="models/antares-p6.html" class="btn btn-primary">View Project</a>
           </div>
         </div>
       </div>
@@ -30,9 +30,9 @@
         <div class="card h-100 shadow-sm">
           <img src="assets/img/CurtaTipo1/CompleteGroup.JPG" class="card-img-top" alt="Curta Model 1">
           <div class="card-body">
-            <h5 class="card-title">Curta Model 1</h5>
+            <h5 class="card-title">Curta Type 1</h5>
             <p class="card-text">Detailed 3D reconstruction based on the original factory blueprints.</p>
-            <a href="modelos/curtatipo1.html" class="btn btn-primary">View Project</a>
+            <a href="models/curtatipo1.html" class="btn btn-primary">View Project</a>
           </div>
         </div>
       </div>
