--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-light">
 
   <div class="container py-5">
-    <h1 class="mb-4 text-center">CAD Model Portfolio – teruteru314</h1>
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
