--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
-      <!-- Tarjeta 1 -->
+      <!-- PROJECT: antaresp6 -->
       <div class="col">
         <div class="card h-100 shadow-sm">
           <img src="assets/img/AntaresP6/Antares Main.JPG" class="card-img-top" alt="Antares P6">
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <!-- Tarjeta 2 -->
+      <!-- PROJECT: curtatipo1 -->
       <div class="col">
         <div class="card h-100 shadow-sm">
           <img src="assets/img/CurtaTipo1/CompleteGroup.JPG" class="card-img-top" alt="Curta Model 1">
@@ -37,7 +37,22 @@
         </div>
       </div>
 
-      <!-- Podés seguir agregando más tarjetas copiando y cambiando datos -->
+      
+
+<!-- PROJECT: astrats22 -->
+<div class="project">
+  <h2>Astra TS22</h2>
+  <h4>Astra Unceta TS-22 pistol, cal. .22LR (1987)</h4>
+  <img src="assets/img/astrats22/render1.jpg" alt="Astra TS22" class="main-image" />
+  <p>Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+  <p><a href="assets/img/astrats22/astra ts-22 (step).zip" download>Download ZIP</a></p>
+  <div class="gallery">
+    <img src="assets/img/astrats22/render1.jpg" alt="Gallery image" class="gallery-image" />
+    <img src="assets/img/astrats22/render2.jpg" alt="Gallery image" class="gallery-image" />
+  </div>
+</div>
+
+<!-- END-OF-PROJECTS -->
 
     </div>
   </div>
