--- a/index.html
+++ b/index.html
@@ -37,21 +37,17 @@
         </div>
       </div>
 
-      
-
 <!-- PROJECT: astrats22 -->
-<div class="project">
-  <h2>Astra TS22</h2>
-  <h4>Astra Unceta TS-22 pistol, cal. .22LR (1987)</h4>
-  <img src="assets/img/astrats22/render1.jpg" alt="Astra TS22" class="main-image" />
-  <p>Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
-  <p><a href="assets/img/astrats22/astra ts-22 (step).zip" download>Download ZIP</a></p>
-  <div class="gallery">
-    <img src="assets/img/astrats22/render1.jpg" alt="Gallery image" class="gallery-image" />
-    <img src="assets/img/astrats22/render2.jpg" alt="Gallery image" class="gallery-image" />
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS22">
+    <div class="card-body">
+      <h5 class="card-title">Astra TS22</h5>
+      <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+      <a href="models/astrats22.html" class="btn btn-primary">View Project</a>
+    </div>
   </div>
 </div>
-
 <!-- END-OF-PROJECTS -->
 
     </div>
