--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -8,11 +8,23 @@
 </head>
 <body class="bg-light">
   <div class="container py-5">
-    <h1>Astra TS22</h1>
-    <h3>Astra Unceta TS-22 pistol, cal. .22LR (1987)</h3>
-    <img src="assets/img/astrats22/render1.jpg" class="img-fluid mb-4" alt="Astra TS22">
-    <p>Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
-    <p><a href="../index.html">Back to portfolio</a></p>
+    <h1 class="mb-3">Astra TS22</h1>
+    <h4 class="mb-4 text-muted">Astra Unceta TS-22 pistol, cal. .22LR (1987)</h4>
+    <div class="card mb-4 shadow-sm">
+      <img src="../assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS22">
+      <div class="card-body">
+        <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+        <a href="../assets/img/astrats22/astra ts-22 (step).zip" class="btn btn-primary" download>Download ZIP</a>
+      </div>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="../assets/img/astrats22/render2.jpg" class="card-img-top" alt="Gallery image">
+        </div>
+      </div>
+    </div>
+    <p class="mt-4"><a href="../index.html">← Back to portfolio</a></p>
   </div>
 </body>
 </html>
