--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
     </div>
   </div>
 </div>
+<!-- PROJECT: beretta950b -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
+    <div class="card-body">
+      <h5 class="card-title">Beretta 950B Minx</h5>
+      <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
+After 1968 this model included an external safety.
+It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfire&quot;</p>
+      <a href="models/beretta950b.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
 <!-- END-OF-PROJECTS -->
 
     </div>
