--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
       <!-- PROJECT: antaresp6 -->
-      <div class="col">
-        <div class="card h-100 shadow-sm">
-          <img src="assets/img/AntaresP6/Antares Main.JPG" class="card-img-top" alt="Antares P6">
-          <div class="card-body">
-            <h5 class="card-title">Antares P6</h5>
-            <p class="card-text">Full reverse-engineered model of a mechanical calculator with 750+ unique parts.</p>
-            <a href="models/antares-p6.html" class="btn btn-primary">View Project</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- PROJECT: curtatipo1 -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/antaresp6/antares main.jpg" class="card-img-top" alt="Antares P6">
+    <div class="card-body">
+      <h5 class="card-title">Antares P6</h5>
+      <p class="card-text">Later model of an Antares P6 Italian made calculator, from around 1950.
+BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW2015 bugs become utterly annoying. My machine can hardly deal with it; it takes around 5 min to refresh!!</p>
+      <a href="models/antaresp6.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+<!-- PROJECT: curtatipo1 -->
       <div class="col">
         <div class="card h-100 shadow-sm">
           <img src="assets/img/CurtaTipo1/CompleteGroup.JPG" class="card-img-top" alt="Curta Model 1">
@@ -58,6 +58,21 @@
 After 1968 this model included an external safety.
 It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfire&quot;</p>
       <a href="models/beretta950b.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+<!-- PROJECT: curtatype1 -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
+    <div class="card-body">
+      <h5 class="card-title">Curta Type 1</h5>
+      <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
+Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
+See also:
+http://curta.org/wiki
+You can get blueprints and instructions in:</p>
+      <a href="models/curtatype1.html" class="btn btn-primary">View Project</a>
     </div>
   </div>
 </div>
