--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-﻿<html>
-<body>
+﻿<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>teruteru314 – CAD Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="bg-light">
+
+  <div class="container py-5">
+    <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
+
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 <!-- PROJECT: antaresp6 -->
 <div class="col">
   <div class="card h-100 shadow-sm">
