--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,8 @@
     <h1 class="mb-4 text-center">CAD Model Portfolio of Teruteru</h1>
 
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
-<!-- PROJECT: antaresp6 -->
+
+      <!-- PROJECT: antaresp6 -->
 <div class="col">
   <div class="card h-100 shadow-sm">
     <img src="assets/img/antaresp6/antares main.jpg" class="card-img-top" alt="Antares P6">
@@ -23,14 +25,25 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     </div>
   </div>
 </div>
+<!-- PROJECT: curtatipo1 -->
+      <div class="col">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/img/CurtaTipo1/CompleteGroup.JPG" class="card-img-top" alt="Curta Model 1">
+          <div class="card-body">
+            <h5 class="card-title">Curta Type 1</h5>
+            <p class="card-text">Detailed 3D reconstruction based on the original factory blueprints.</p>
+            <a href="models/curtatipo1.html" class="btn btn-primary">View Project</a>
+          </div>
+        </div>
+      </div>
+
 <!-- PROJECT: astrats22 -->
 <div class="col">
   <div class="card h-100 shadow-sm">
-    <img src="assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS-22">
+    <img src="assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS22">
     <div class="card-body">
-      <h5 class="card-title">Astra TS-22</h5>
-      <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
-See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+      <h5 class="card-title">Astra TS22</h5>
+      <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s. See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
       <a href="models/astrats22.html" class="btn btn-primary">View Project</a>
     </div>
   </div>
@@ -64,5 +77,13 @@ You can get blueprints and instructions in:</p>
   </div>
 </div>
 <!-- END-OF-PROJECTS -->
+
+    </div>
+  </div>
+
+  <footer class="text-center py-4 text-muted">
+    &copy; 2025 teruteru314
+  </footer>
+
 </body>
 </html>
