--- a/index.html
+++ b/index.html
@@ -24,6 +24,49 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
   </div>
 </div>
 
+<!-- PROJECT: astrats22 -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS-22">
+    <div class="card-body">
+      <h5 class="card-title">Astra TS-22</h5>
+      <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
+See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
+      <a href="models/astrats22.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
+<!-- PROJECT: beretta950b -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
+    <div class="card-body">
+      <h5 class="card-title">Beretta 950B Minx</h5>
+      <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
+After 1968 this model included an external safety.
+It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfire&quot;</p>
+      <a href="models/beretta950b.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
+<!-- PROJECT: curtatype1 -->
+<div class="col">
+  <div class="card h-100 shadow-sm">
+    <img src="assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
+    <div class="card-body">
+      <h5 class="card-title">Curta Type 1</h5>
+      <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
+Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
+See also:
+http://curta.org/wiki
+You can get blueprints and instructions in:</p>
+      <a href="models/curtatype1.html" class="btn btn-primary">View Project</a>
+    </div>
+  </div>
+</div>
+
 <!-- END-OF-PROJECTS -->
     </div>
   </div>
