--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -3,29 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Astra TS-22</title>
+  <title>Astra TS-22 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <div class="container py-5">
-    <h1 class="mb-3">Astra TS-22</h1>
-    <h4 class="mb-4 text-muted">Astra Unceta TS-22 pistol, cal. .22LR (1987)</h4>
-    <div class="card mb-4 shadow-sm">
-      <img src="../assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS-22">
-      <div class="card-body">
-        <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
+    <h1 class="mb-4 text-center">Astra TS-22</h1>
+    <h4 class="mb-4 text-muted text-center">Astra Unceta TS-22 pistol, cal. .22LR (1987)</h4>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card mb-4 shadow-sm">
+          <img src="../assets/img/astrats22/Render1.JPG" class="card-img-top" alt="Astra TS-22">
+          <div class="card-body">
+            <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
 See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
-        <a href="../assets/files/astrats22/astra_ts-22_(step).zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/astrats22/Astra_TS-22_(step).zip" class="btn btn-primary" download>Download ZIP</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/astrats22/render2.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/astrats22/Render2.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
-    <p class="mt-4"><a href="../index.html">← Back to portfolio</a></p>
+    <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <footer class="text-center py-4 text-muted">
+    &copy; 2025 teruteru314
+  </footer>
 </body>
 </html>
