--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -3,40 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Beretta 950B Minx</title>
+  <title>Beretta 950B Minx – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <div class="container py-5">
-    <h1 class="mb-3">Beretta 950B Minx</h1>
-    <h4 class="mb-4 text-muted">Beretta 950-B Minx cal .22 Short (1960)</h4>
-    <div class="card mb-4 shadow-sm">
-      <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
-      <div class="card-body">
-        <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
+    <h1 class="mb-4 text-center">Beretta 950B Minx</h1>
+    <h4 class="mb-4 text-muted text-center">Beretta 950-B Minx cal .22 Short (1960)</h4>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card mb-4 shadow-sm">
+          <img src="../assets/img/beretta950b/Render1.JPG" class="card-img-top" alt="Beretta 950B Minx">
+          <div class="card-body">
+            <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
 After 1968 this model included an external safety.
 It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfire&quot;</p>
-        <a href="../assets/files/beretta950b/beretta 950b minx - step.zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/beretta950b/Beretta 950B Minx - Step.zip" class="btn btn-primary" download>Download ZIP</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/Image3.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/Render2.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/Render4.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
-    <p class="mt-4"><a href="../index.html">← Back to portfolio</a></p>
+    <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <footer class="text-center py-4 text-muted">
+    &copy; 2025 teruteru314
+  </footer>
 </body>
 </html>
