--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -3,97 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Curta Type 1</title>
+  <title>Curta Type 1 – CAD Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
   <div class="container py-5">
-    <h1 class="mb-3">Curta Type 1</h1>
-    <h4 class="mb-4 text-muted">Curta Type 1 calculator (ca.1930)</h4>
-    <div class="card mb-4 shadow-sm">
-      <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
-      <div class="card-body">
-        <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
+    <h1 class="mb-4 text-center">Curta Type 1</h1>
+    <h4 class="mb-4 text-muted text-center">Curta Type 1 calculator (ca.1930)</h4>
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+        <div class="card mb-4 shadow-sm">
+          <img src="../assets/img/curtatype1/Complete Group.JPG" class="card-img-top" alt="Curta Type 1">
+          <div class="card-body">
+            <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
 See also:
 http://curta.org/wiki
 You can get blueprints and instructions in:</p>
-        <a href="../assets/files/curtatype1/curta type 1 (step).zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/curtatype1/Curta Type 1 (step).zip" class="btn btn-primary" download>Download ZIP</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Carriage01.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Carriage02.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Carriage03.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta01.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta02.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta03.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta04.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta05.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta06.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta07.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta08.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta09.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta10.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/Curta11.JPG" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
-    <p class="mt-4"><a href="../index.html">← Back to portfolio</a></p>
+    <p class="mt-4 text-center"><a href="../index.html">← Back to portfolio</a></p>
   </div>
+  <footer class="text-center py-4 text-muted">
+    &copy; 2025 teruteru314
+  </footer>
 </body>
 </html>
