--- a/models/antaresp6.html
+++ b/models/antaresp6.html
@@ -13,11 +13,11 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/antaresp6/Antares Main.JPG" class="card-img-top" alt="Antares P6">
+          <img src="../assets/img/antaresp6/antares main.jpg" class="card-img-top" alt="Antares P6">
           <div class="card-body">
             <p class="card-text">Later model of an Antares P6 Italian made calculator, from around 1950.
 BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW2015 bugs become utterly annoying. My machine can hardly deal with it; it takes around 5 min to refresh!!</p>
-            <a href="../assets/files/antaresp6/Antares P6 (step).zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/antaresp6/antares p6 (step).zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
       </div>
@@ -25,72 +25,72 @@ BEWARE: This model has 600+ parts, and is so damn complicated that the normal SW
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Antares 1.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 1.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Antares 2.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 2.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Antares 3.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/antares 3.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Bottom.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/bottom.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 1.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 1.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 2.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 2.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 3.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 3.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 4.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 4.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 5.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 5.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Carriage 6.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/carriage 6.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Drum01.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/drum01.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Drum02.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/drum02.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Operand Group.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/operand group.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/antaresp6/Upper Plate assy.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/antaresp6/upper plate assy.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
