--- a/models/beretta950b.html
+++ b/models/beretta950b.html
@@ -13,12 +13,12 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/beretta950b/Render1.JPG" class="card-img-top" alt="Beretta 950B Minx">
+          <img src="../assets/img/beretta950b/render1.jpg" class="card-img-top" alt="Beretta 950B Minx">
           <div class="card-body">
             <p class="card-text">Pistol Beretta 950-B &quot;Minx&quot;, from 1960, in caliber .22 Short.
 After 1968 this model included an external safety.
 It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfire&quot;</p>
-            <a href="../assets/files/beretta950b/Beretta 950B Minx - Step.zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/beretta950b/beretta 950b minx - step.zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
       </div>
@@ -26,17 +26,17 @@ It was also chambered in .25 ACP caliber; in that case it was named &quot;Jetfir
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/Image3.jpg" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/image3.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/Render2.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/render2.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/beretta950b/Render4.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/beretta950b/render4.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
