--- a/models/astrats22.html
+++ b/models/astrats22.html
@@ -13,11 +13,11 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/astrats22/Render1.JPG" class="card-img-top" alt="Astra TS-22">
+          <img src="../assets/img/astrats22/render1.jpg" class="card-img-top" alt="Astra TS-22">
           <div class="card-body">
             <p class="card-text">Pistol Astra Unceta, model TS-22 from 1987. Pistol created as a starter for precision shooting in late 70s.
 See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-ts-22-cal-22lr.html</p>
-            <a href="../assets/files/astrats22/Astra_TS-22_(step).zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/astrats22/astra_ts-22_(step).zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
       </div>
@@ -25,7 +25,7 @@ See http://historiadelasarmasdefuego.blogspot.com.uy/2009/05/pistola-astra-mod-t
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/astrats22/Render2.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/astrats22/render2.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
