--- a/models/curtatype1.html
+++ b/models/curtatype1.html
@@ -13,14 +13,14 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="card mb-4 shadow-sm">
-          <img src="../assets/img/curtatype1/Complete Group.JPG" class="card-img-top" alt="Curta Type 1">
+          <img src="../assets/img/curtatype1/complete group.jpg" class="card-img-top" alt="Curta Type 1">
           <div class="card-body">
             <p class="card-text">(from wikipedia): The Curta is a small mechanical calculator developed by Curt Herzstark. The Curta&#39;s design is a descendant of Gottfried Leibniz&#39;s Stepped Reckoner and Charles Thomas&#39; Arithmometer, accumulating values on cogs, which are added or complemented by a stepped drum mechanism. It has an extremely compact design: a small cylinder that fits in the palm of the hand.
 Curtas were considered the best portable calculators available until they were displaced by electronic calculators in the 1970s.
 See also:
 http://curta.org/wiki
 You can get blueprints and instructions in:</p>
-            <a href="../assets/files/curtatype1/Curta Type 1 (step).zip" class="btn btn-primary" download>Download ZIP</a>
+            <a href="../assets/files/curtatype1/curta type 1 (step).zip" class="btn btn-primary" download>Download ZIP</a>
           </div>
         </div>
       </div>
@@ -28,72 +28,72 @@ You can get blueprints and instructions in:</p>
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Carriage01.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage01.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Carriage02.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage02.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Carriage03.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/carriage03.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta01.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta01.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta02.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta02.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta03.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta03.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta04.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta04.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta05.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta05.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta06.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta06.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta07.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta07.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta08.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta08.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta09.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta09.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta10.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta10.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
       <div class="col">
         <div class="card h-100">
-          <img src="../assets/img/curtatype1/Curta11.JPG" class="card-img-top" alt="Gallery image">
+          <img src="../assets/img/curtatype1/curta11.jpg" class="card-img-top" alt="Gallery image">
         </div>
       </div>
     </div>
